@@ -1,3 +1,12 @@
+2011-03-15 Niels Grewe <niels.grewe@halbordnung.de>
+
+	* Source/OpalText/FreeType/OPFreeTypeFont.m: Make FreeType
+	handle text transforms (at least partially). Implement getting
+	glyph advances.
+	* Source/OpalText/FreeType/OPFreeTypeUtil.h: Add convenience
+	functions for translating between CGAffineTransforms and
+	FreeType vectors/matrices.
+
 2011-03-14 Niels Grewe <niels.grewe@halbordnung.de>
 
 	* Source/OpalText/FreeType/OPFreeTypeFont.m: Implement some more
